@@ -15,10 +15,6 @@
 #include "define.h"
 #include "lzfu.h"
 
-#ifdef HAVE_SYS_TYPES_H
-    #include <sys/types.h>
-#endif
-
 
 #define LZFU_COMPRESSED 		0x75465a4c
 #define LZFU_UNCOMPRESSED		0x414c454d
